# delivery_app

./: docker-compose.yml  pyproject.toml
delivery-app/: .env  main.py
delivery-app/alembic/versions/: 2024_12_06_1556-ce669a1451b3_initial_migration.py
delivery-app/api/api_v1/: parcel.py
delivery-app/core/: config.py  db_helper.py  rabbitmq.py  redis_helper.py  session_middleware.py
delivery-app/models/: __init__.py  parcel.py
delivery-app/schemas/: parcel.py
delivery-app/services/: parcel.py
tests/: test_routes.py
